# t-primero.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  contact.html  contact.qmd  cv.html  cv.qmd  index.html  index.qmd  projects.html  projects.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css
_site/: about.html  index.html  search.json
docs/: about.html  contact.html  cv.html  index.html  projects.html  search.json  styles.css
docs/site_libs/bootstrap/: bootstrap-1398071433f561d33bd5288ea9858dac.min.css  bootstrap-2ee31e9e36cf4f93f31569990d11ce08.min.css
